Fix issues with icons causing overlapping button text

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -54,7 +54,6 @@ button.p-button {
   &:focus {
     box-shadow: none;
   }
-
 }
 
 .p-overlaypanel .p-overlaypanel-content {
@@ -70,4 +69,8 @@ button.p-button {
   .t-dialog-responsive {
     width: 100%
   }
+}
+
+.fas, .far {
+  writing-mode: horizontal-tb;
 }
